# uniclogs-stationd

./: .containerignore  .flake8  .gitignore  .gitmodules  README.md  __main__.py  accessory.py  amplifier.py  compose.yaml  config.ini  pyproject.toml  stadiond.py  stationd.py  testing.py  udp-test.py
.github/workflows/: pypi.yml  tests.yml
container/: Containerfile
doc/: README.md
examples/: 99-serial.rules  adc-scan.sh  adt7410.service  append-to-boot-config.txt  config.ini-UPB  config.ini-testing  get-temp.sh  gpio-scan.sh  install.sh  park-rotator.sh  rotctld.service  stationc.sh  stationd.ini-testing  stationd.service
src/: amplifier.py  common.h  statemachine.c  statemachine.h  stationd.py
src/stationd/: __init__.py  __main__.py  accessory.py  amplifier.py  constants.py  gpio_alloc.py  stationd.py
tests/: __init__.py  test_accessory.py  test_amplifier.py  test_stationd.py
