[build-system]
requires = ["setuptools>=75", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "uniclogs-stationd"
description = "A power management Daemon for Uniclogs."
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Steven Borrego" }
]

dependencies = [
    "gpiod>=2.3.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "sphinx",
    "mypy>=1.17.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.12.5",
]

[tool.mypy]
ignore_missing_imports = true
# TODO: Remove when gpio submodule is replaced.
exclude = [
    "src/stationd/gpio/.*"
]

[tool.pytest.ini_options]
norecursedirs = ["gpio"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov"
]

[tool.coverage.run]
source = ["."]
omit = [
    "gpio/*", "tests/*"
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"
exclude = ["src/stationd/gpio/**"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "Q000",    # bad-quotes-inline-string
    "Q002",    # bad-quotes-docstring
    "D300",    # triple-single-quotes
    "COM812",  # prohibited-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "D100",    # undocumented-public-module
    "D101",    # undocumented-public-class
    "D102",    # undocumented-public-method
    # might leave off always. Does the user need to know __str__ makes a str?
    "D105",    # undocumented-magic-method
    # D203, and D213 conflict with D211 and D212, prefer the latter which
    # follow PEP257
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    # Allow FIXMEs etc, but don't be too rigid about formatting. Consider not
    # ignoring FIX here so local runs point them out but ignoring them in CI
    # runs so they don't block commits.
    "FIX",      # flake8-fixme
    "TD001",    # invalid-todo-tag
    "TD002",    # missing-todo-author
    "TD003",    # missing-todo-link
    "TD004",    # missing-todo-colon
    "EM101",    # raw-string-in-exception
    "EM102",    # f-string-in-exception
    "D413",     # blank-line-after-last-section
    # This might be good to turn on later, right now I'm on the fence about it
    "TRY003",   # raise-vanilla-args
    # Another one that might be good later but for now is too argessive. Many of
    # the numbers it flags are obvious from context.
    "PLR2004",  # magic value used in comparison
    "PLR0911",  # too many return statements
]

[tool.ruff.lint.per-file-ignores]
# Test specific lint ignores.
"tests/**/test_*.py" = [
    "S101",      # assert - pytest prefers plain assert
    "PLC0415",   # import - pytests need flexibility around when to import
]
# Don't lint gpio submodule.
# TODO: Remove when gpio submodule is replaced.
"**/gpio/**" = ["ALL"]
