[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "uniclogs-stationd"
description = "A power management Daemon for UniClOGS."
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
readme = "README.md"
authors = [
    { name = "Steven Borrego" },
    { name = "Bryan Borgeson" }
]
dynamic = ["version"]
dependencies = [
    "gpiod>=2.3.0"
]

[dependency-groups]
dev = [
    "sphinx",
    "mypy>=1.17.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/stationd/_version.py"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov"
]

[tool.coverage.run]
source = ["."]

[tool.ruff]
exclude = [
    "src/stationd/_version.py"
]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "Q000",    # bad-quotes-inline-string
    "Q002",    # bad-quotes-docstring
    "D300",    # triple-single-quotes
    "COM812",  # prohibited-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "D102",    # undocumented-public-method
    # might leave off always. Does the user need to know __str__ makes a str?
    "D105",    # undocumented-magic-method
    # D203, and D213 conflict with D211 and D212, prefer the latter which
    # follow PEP257
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    # Allow FIXMEs etc, but don't be too rigid about formatting. Consider not
    # ignoring FIX here so local runs point them out but ignoring them in CI
    # runs so they don't block commits.
    "FIX",      # flake8-fixme
    "TD001",    # invalid-todo-tag
    "TD002",    # missing-todo-author
    "TD003",    # missing-todo-link
    "TD004",    # missing-todo-colon
    "EM101",    # raw-string-in-exception
    "EM102",    # f-string-in-exception
    "D413",     # blank-line-after-last-section
    # This might be good to turn on later, right now I'm on the fence about it
    "TRY003",   # raise-vanilla-args
    # Another one that might be good later but for now is too argessive. Many of
    # the numbers it flags are obvious from context.
    "PLR2004",  # magic value used in comparison
    "PLR0911",  # too many return statements
]

[tool.ruff.lint.per-file-ignores]
# Test-specific lint ignores.
"tests/**/test_*.py" = [
    "S101",      # assert - pytest prefers plain assert
    "PLC0415",   # import - pytests need flexibility around when to import
    # The test modules are pretty self-describing, no need to enforce docstrings for them.
    "D100",      # modules
    "D101",      # classes
    "D102",      # methods
    "D103",      # functions
    "D104",      # package
    "D105",      # magic methods
    "D106",      # nested classes
    "D107",      # __init__
]
